--- a/scripts/bio_assessment_cleaning_script.Rmd
+++ b/scripts/bio_assessment_cleaning_script.Rmd
@@ -100,34 +100,32 @@ bio_df <- raw_bio_df %>%
 
 #remove excess variables from qualtrics, slice, re-order, rename, and create calculated variables
 bio_td <- bio_df %>% 
-  #select(-start_date:-recipient_last_name, -recipient_email:-user_language) %>% 
   slice(-1:-2) %>% 
   select(id, bp1a, bp1b, bp2a, bp2b, height_measure:fev1c, fev1b, pef2, r1:r12, q1:q14, b1:b29a, starts_with("x")) %>% 
   mutate_if(is.character, ~na_if(., "")) %>% 
   mutate_all(~ifelse(is.nan(.), NA, .)) %>% 
   mutate_at(vars(starts_with("bp"), starts_with("pef"), starts_with("fev"), ends_with("measure")), as.numeric) %>%
   mutate_at(vars(starts_with("pef"), starts_with("fev")), ~ ifelse(. == 0, NA, .)) %>% 
-  mutate_if(is.character, as.factor) %>% 
   left_join(pulse_td) %>% 
   mutate(bp_sys_avg = rowMeans(select(., bp1a, bp2a), na.rm = TRUE),
          bp_dia_avg = rowMeans(select(., bp1b, bp2b), na.rm = TRUE),
-         bp_sys_cal = ifelse(bp_sys_avg >= 140, "Yes", "No"),
-         bp_dia_cal = ifelse(bp_dia_avg >= 90, "Yes", "No"),
-         bp_sys_pal = ifelse(bp_sys_avg >= quantile(bp_sys_avg, 0.75), "Yes", "No"),
-         bp_dia_pal = ifelse(bp_dia_avg >= quantile(bp_dia_avg, 0.75), "Yes", "No"),
+         bp_sys_cal = ifelse(bp_sys_avg >= 140, 1, 0),
+         bp_dia_cal = ifelse(bp_dia_avg >= 90, 1, 0),
+         bp_sys_pal = ifelse(bp_sys_avg >= quantile(bp_sys_avg, 0.75), 1, 0),
+         bp_dia_pal = ifelse(bp_dia_avg >= quantile(bp_dia_avg, 0.75), 1, 0),
          pef_avg    = round(rowMeans(select(., starts_with("pef")), na.rm = TRUE), 1),
-         pef_cal    = ifelse(pef_avg <= 319, "Yes", "No"),
-         pef_pal    = ifelse(pef_avg >= quantile(pef_avg, 0.75, na.rm = TRUE), "Yes", "No"),
+         pef_cal    = ifelse(pef_avg <= 319, 1, 0),
+         pef_pal    = ifelse(pef_avg >= quantile(pef_avg, 0.75, na.rm = TRUE), 1, 0),
          wth_ratio    = round(iliac_crest_measure / hip_measure, 3),
-         wth_cal = ifelse(wth_ratio >= 0.85, "Yes", "No"),
-         wth_pal = ifelse(wth_ratio >= quantile(wth_ratio, 0.75), "Yes", "No"),
+         wth_cal = ifelse(wth_ratio >= 0.85, 1, 0),
+         wth_pal = ifelse(wth_ratio >= quantile(wth_ratio, 0.75), 1, 0),
          bmi_score  = weight_measure / ((height_measure / 100)^2),
-         bmi_cal    = ifelse(bmi_score >= 30, "Yes", "No"),
-         bmi_pal    = ifelse(bmi_score >= quantile(bmi_score, 0.75), "Yes", "No"),
+         bmi_cal    = ifelse(bmi_score >= 30, 1, 0),
+         bmi_pal    = ifelse(bmi_score >= quantile(bmi_score, 0.75), 1, 0),
          pulse_avg  = rowMeans(select(., pulse1, pulse2), na.rm = TRUE),
-         pulse_tavg = ifelse(!is.na(pulse1) & !is.na(pulse2), "Yes", "No"),
-         pulse_cal  = ifelse(pulse_avg >= 90, "Yes", "No"),
-         pulse_pal  = ifelse(pulse_avg >= quantile(pulse_avg, 0.75, na.rm = TRUE), "Yes", "No")) %>% 
+         pulse_tavg = ifelse(!is.na(pulse1) & !is.na(pulse2), 1, 0),
+         pulse_cal  = ifelse(pulse_avg >= 90, 1, 0),
+         pulse_pal  = ifelse(pulse_avg >= quantile(pulse_avg, 0.75, na.rm = TRUE), 1, 0)) %>% 
   rename(bp1 = bp1a,
          bp2 = bp1b,
          bp3 = bp2a,
@@ -154,58 +152,119 @@ bio_td <- bio_df %>%
   rename_at(vars(matches("^b[0-9]")), ~paste0("hbc", substr(., 2, nchar(.)))) %>%
   rename_at(vars(matches("^r[0-9]")), ~paste0("rhs", substr(., 2, nchar(.)))) %>%
   rename_at(vars(matches("^x[0-9]")), ~paste0("chc", substr(., 2, nchar(.)))) %>%
-  rename_at(vars(matches("^q[0-9]")), ~paste0("cev", substr(., 2, nchar(.)))) %>%
-  select(id, starts_with("bp"), starts_with("bmi"), starts_with("wth"), pef1, pef2, pef3, pef4, pef5, pef6, pef_avg, pef_cal, pef_pal, starts_with("pulse"), starts_with("rhs"), starts_with("cev"), starts_with("hbc"), starts_with("chc")) %>% 
+  rename_at(vars(matches("^q[0-9]")), ~paste0("cev", substr(., 2, nchar(.)))) %>% 
   mutate_at(vars(bmi1, bmi2, wth2, ), ~ round(., 1)) %>% 
   mutate_at(vars(bmi_score, pef5), ~ round(., 2)) %>% 
   mutate_at(vars(pef2, pef3), ~ round(.)) %>% 
-  mutate(rhs1 = gsub("\\d+ - ", "", rhs1),
-         chc20a = gsub("\\..*$", "", chc20a))
+  mutate(chc20a = gsub("\\..*$", "", chc20a)) %>% 
+  #transform all characters to numbers for survey variables
+  mutate_if(is.character, ~ case_when(. == "Yes" ~ "1",
+                                      . == "Yes: (Fill in medication name)" ~ "1",
+                                      . == "Yes: (Fill in medication)" ~ "1",
+                                      . == "No" ~ "0",
+                                      TRUE ~ . )) %>% 
+  mutate_at(vars(rhs9, rhs10, rhs11, rhs12),
+            ~ case_when(. == "Definitely true" ~ "1",
+                        . == "Mostly true" ~ "2",
+                        . == "Don't know" ~ "3",
+                        . == "Mostly false" ~ "4",
+                        . == "Definitely false" ~ "5",
+                        TRUE ~ .)) %>% 
+  mutate_at(vars(hbc16a, hbc17a, hbc18a, hbc19a),
+            ~ case_when(. == "a. never" ~ "1", 
+                        . == "b. .5-1 hour/day" ~ "2",
+                        . == "c. 1-5 hours/day" ~ "3",
+                        . == "d. 5 or more hours/day" ~ "4",
+                        TRUE ~ .)) %>% 
+  mutate_at(vars(hbc21, hbc23),
+            ~ case_when(. == "a. 0" ~ "1",
+                        . == "b. 1-3 cups or cans" ~ "2",
+                        . == "c. 4-6 cups or cans" ~ "3",
+                        . == "d. 7-9 cups or cans" ~ "4",
+                        . == "e. 10 or more cups or cans" ~ "5",
+                        TRUE ~ .)) %>% 
+  mutate(rhs1 = case_when(rhs1 == "1 - Excellent" ~ "1",
+                          rhs1 == "2 - Very Good" ~ "2",
+                          rhs1 == "3 - Good" ~ "3",
+                          rhs1 == "4 - Fair" ~ "4",
+                          rhs1 == "5 - Poor" ~ "5",
+                          rhs1 == "6 - Decline to Answer" ~ "-66",
+                          TRUE ~ rhs1),
+         cev12 = case_when(cev12 == "Johnson & Johnson" ~ "1",
+                           cev12 == "Moderna" ~ "2",
+                           cev12 == "Pfizer" ~ "3",
+                           cev12 == "Not Specified (this option can be used when a participant cannot recall)" ~ "-77",
+                           TRUE ~ cev12),
+         hbc13 = case_when(hbc13 == "1 cigarette" ~ "1",
+                           hbc13 == "2-5 cigarettes" ~ "2",
+                           hbc13 == "1 pack" ~ "3",
+                           hbc13 == "2 packs" ~ "4",
+                           TRUE ~ hbc13),
+         hbc15 = case_when(hbc15 == "1 cigarette" ~ "1",
+                           hbc15 == "2-5 cigarettes" ~ "2",
+                           TRUE ~ hbc13),
+         hbc28 = case_when(hbc28 == "Mild" ~ "1", 
+                           hbc28 == "Moderate" ~ "2",
+                           hbc28 == "Vigorous" ~ "3",
+                           TRUE ~ hbc28),
+         chc1a = ifelse(chc1a == "Maybe", "3", chc1a)) %>% 
+  #specify missing data
+  mutate_all(~ ifelse(. %in% c("N/A - Lives Alone", "N/A - Not currently employed"), "-88", .)) %>% 
+  mutate_all(~ ifelse(. %in% c("Decline to Answer"), "-66", .)) %>% 
+    select(id, starts_with("bp"), starts_with("bmi"), starts_with("wth"), pef1, pef2, pef3, pef4, pef5, pef6,
+           pef_avg, pef_cal, pef_pal, starts_with("pulse"), starts_with("rhs"), starts_with("cev"),
+           starts_with("hbc"), starts_with("chc"))
 
-#create RAND subscales
-rhs_calc <- bio_td %>% 
-  select(starts_with("rhs")) %>% 
-  mutate(rhs1_r = case_when(
-      rhs1 == 5 ~ 1,
-      rhs1 == 4 ~ 2,
-      rhs1 == 3 ~ 3,
-      rhs1 == 2 ~ 4,
-      rhs1 == 1 ~ 5,
-     # rhs1 == 6 ~ -77,
-      TRUE ~ NA_real_)) %>% 
-  mutate(across(starts_with("rhs"), ~if_else(.x %in% c("Decline to Answer", "Don't know"), NA_character_, .x))) %>%
-  mutate(
-    rhs1 = case_when(
-      rhs1 == 5 ~ 1,
-      rhs1 == 4 ~ 2,
-      rhs1 == 3 ~ 3,
-      rhs1 == 2 ~ 4,
-      rhs1 == 1 ~ 5,
-     # rhs1 == 6 ~ -77,
-      TRUE ~ NA_real_
-    ),
-    across(
-      c(rhs2:rhs8),
-      ~case_when(
-        .x == "Yes" ~ 1,
-        .x == "No" ~ 0,
-       # .x == 3 ~ -77,
-        TRUE ~ NA_real_
-      )
-    ),
-    across(
-      c(rhs9:rhs12),
-      ~case_when(
-        .x == 1 ~ 5,
-        .x == 2 ~ 4,
-        .x == 3 ~ 3,
-        .x == 4 ~ 2,
-        .x == 5 ~ 1,
-        .x == 6 ~ -77,
-        TRUE ~ NA_real_
-      )
-    )
-  )
+
+
+
+
+#ADD SKIP LOGIC NA'S (ESP. HBC VARS WHEN 0 SOME = NA; also need to check CHC - check all missing values to make sure NA is truly missing)
+
+# #create RAND subscales
+# rhs_calc <- bio_td %>% 
+#   select(starts_with("rhs")) %>% 
+#   mutate(rhs1_r = case_when(
+#       rhs1 == 5 ~ 1,
+#       rhs1 == 4 ~ 2,
+#       rhs1 == 3 ~ 3,
+#       rhs1 == 2 ~ 4,
+#       rhs1 == 1 ~ 5,
+#      # rhs1 == 6 ~ -77,
+#       TRUE ~ NA_real_)) %>% 
+#   mutate(across(starts_with("rhs"), ~if_else(.x %in% c("Decline to Answer", "Don't know"), NA_character_, .x))) %>%
+#   mutate(
+#     rhs1 = case_when(
+#       rhs1 == 5 ~ 1,
+#       rhs1 == 4 ~ 2,
+#       rhs1 == 3 ~ 3,
+#       rhs1 == 2 ~ 4,
+#       rhs1 == 1 ~ 5,
+#      # rhs1 == 6 ~ -77,
+#       TRUE ~ NA_real_
+#     ),
+#     across(
+#       c(rhs2:rhs8),
+#       ~case_when(
+#         .x == "Yes" ~ 1,
+#         .x == "No" ~ 0,
+#        # .x == 3 ~ -77,
+#         TRUE ~ NA_real_
+#       )
+#     ),
+#     across(
+#       c(rhs9:rhs12),
+#       ~case_when(
+#         .x == 1 ~ 5,
+#         .x == 2 ~ 4,
+#         .x == 3 ~ 3,
+#         .x == 4 ~ 2,
+#         .x == 5 ~ 1,
+#         .x == 6 ~ -77,
+#         TRUE ~ NA_real_
+#       )
+#     )
+#   )
 
 #take out identifiable cev and chc vars and rename sequentially for archived dataset
 #specify excluded variables
@@ -310,7 +369,6 @@ bio_td_archive <- bio_td %>%
          chc20b	=	chc20c,
          chc20c	=	chc20d,
          chc20d	=	chc20f)
-
 
 
 #export for use before cleaned
