--- a/scripts/bio_assessment_cleaning_script.Rmd
+++ b/scripts/bio_assessment_cleaning_script.Rmd
@@ -170,7 +170,7 @@ bio_td <- bio_df %>%
           end_day = as.Date(mdy_hm(end_date)),
           end_time = format(mdy_hm(end_date), "%H:%M")) %>% 
   mutate(diff_day = ifelse(start_day != end_day, "Yes", "No")) %>% 
-  select(family, ends_with("day"), ends_with("time"), bp1a, bp1b, bp2a, bp2b, height_measure:fev1c, fev1b,
+  select(family, start_date, end_date, ends_with("day"), ends_with("time"), bp1a, bp1b, bp2a, bp2b, height_measure:fev1c, fev1b,
          pef2, r1:r12, q1:q14, b1:b29a, starts_with("x")) %>% 
   mutate_if(is.character, ~na_if(., "")) %>% 
   mutate_at(vars(starts_with("bp"), starts_with("pef"), starts_with("fev"), ends_with("measure")), as.numeric) %>%
@@ -194,7 +194,6 @@ bio_td <- bio_df %>%
          pulse_avg  = ifelse(pulse1 != -55 & pulse2 != -55, rowMeans(select(., pulse1, pulse2), na.rm = TRUE), -55),
          pulse_cal  = ifelse(pulse_avg != -55, ifelse(pulse_avg >= 90, 1, 0), -55),
          pulse_pal  = ifelse(pulse_avg != -55, ifelse(pulse_avg >= quantile(pulse_avg, 0.75, na.rm = TRUE), 1, 0), -55)) %>% 
-  
   rename(bp1 = bp1a,
          bp2 = bp1b,
          bp3 = bp2a,
@@ -416,8 +415,9 @@ bio_na <- bio_td %>%
                   pulse1, pulse2, pulse_avg, pulse_cal, pulse_pal), 
                 ~ ifelse(family == "HR181" | family == "P819" , "-55", .))) %>% 
     mutate_all(~ ifelse(is.na(.) | is.nan(.), -99, .)) %>%  #last after all conditional are dealt with
-    select(family, starts_with("bp"), starts_with("bmi"), starts_with("wth"), pef1, pef2, pef3, pef4, pef5, pef6,
-           pef_avg, pef_cal, pef_pal, starts_with("pulse"), starts_with("rhs"), starts_with("cev"), 
+    select(family, start_date, end_date, starts_with("bp"), starts_with("bmi"), starts_with("wth"), 
+           pef1, pef2, pef3, pef4, pef5, pef6, pef_avg, pef_cal, pef_pal, 
+           starts_with("pulse"), starts_with("rhs"), starts_with("cev"), 
            hbc1, hbc1_elapsed, hbc2, hbc3, hbc4, hbc5, hbc6, hbc7, hbc7a, hbc7b, hbc7c, hbc7c_elapsed,
            hbc8, hbc8a, hbc8b, hbc8c, hbc8c_elapsed, hbc9, hbc9a, hbc9b, hbc9b_elapsed, hbc9c, hbc9d, hbc10, hbc10a,
            hbc10b, hbc10c, hbc10c_elapsed, hbc11, hbc11a, hbc11b, hbc11c, hbc11c_elapsed, hbc12, hbc12a, hbc12b, 
@@ -536,7 +536,7 @@ rhs_subscales <- rhs_calc %>%
          rhs_emo_limit = round(rowMeans(select(., rhs6_p, rhs7_p, rhs8_p), na.rm = TRUE), 2)) %>% 
   select(family, rhs_health, rhs_phys_limit, rhs_emo_limit) %>% 
   right_join(rhs_sub_recode) %>% 
-  select(family, starts_with("bp"), starts_with("bmi"), starts_with("wth"), pef1, pef2, pef3, pef4, pef5, pef6,
+  select(family, start_date, end_date, starts_with("bp"), starts_with("bmi"), starts_with("wth"), pef1, pef2, pef3, pef4, pef5, pef6,
          pef_avg, pef_cal, pef_pal, starts_with("pulse"), rhs1:rhs12, ends_with("_p"), rhs_health, rhs_phys_limit, rhs_emo_limit, 
          starts_with("cev"), starts_with("hbc"), starts_with("chc"))
 
@@ -551,7 +551,7 @@ excluded_vars <- c("cev2", "cev4", "cev13", "cev14", "chc1b", "chc1e", "chc1g", 
                    "chc7e", "chc7g", "chc8d", "chc8f", "chc9b", "chc9e", "chc9g", "chc10b", "chc10e", "chc10g", "chc11b",
                    "chc11e", "chc11g", "chc12b", "chc12e", "chc12g", "chc13b", "chc13e", "chc13g", "chc14b", "chc14e",
                    "chc14g", "chc15b", "chc15e", "chc15g", "chc16b", "chc16e", "chc16g", "chc17d", "chc17f", "chc18d",
-                   "chc18f", "chc19d", "chc19f", "chc20a_1_text", "chc20b", "chc20e", "chc20g")
+                   "chc18f", "chc19d", "chc19f", "chc20a_1_text", "chc20b", "chc20e", "chc20g", "start_date", "end_date")
 
 
 bio_td_archive <- rhs_subscales %>% 
